ARROW-3790: [C++] Fix erroneous safe casting

- Improves coverage of various type combinations under safe/unsafe
  conditions
- Fixes proper bound detection at compile time
- Fixes type traits pattern matching

While reviewing this merge, I noted that python, Ruby/glib and R would use CastOptions differently.

- Python only exposes safe as a single boolean (which flips all options accordingly)
- Ruby exposes 2 out of 3 of the options (probably due to code rot)
- R is going to exposes all 3 modes.

What is the purpose of having the 3 options, could we just expose safe versus unsafe?

Author: François Saint-Jacques <fsaintjacques@gmail.com>

Closes #3022 from fsaintjacques/ARROW-3790-unsigned-cast and squashes the following commits:

a54392831 <François Saint-Jacques> ARROW-3790:  Fix erroneous safe casting